# TruthAnchor

./: .gitignore  README.md  pyproject.toml
examples/: tac_eval.py  tutorial.ipynb
src/truthanchor/: __init__.py  eval.py  generation.py  scoring.py  train.py
src/truthanchor/utils/: __init__.py  custom_data.py  datasets.py  io.py  mapper.py  methods.py  metrics.py  modeling.py  paths.py  visualization.py
src/truthanchor/utils/resources/: __init__.py
src/truthanchor/utils/resources/prompts/: __init__.py  commonsenseqa.txt  verb.txt
src/truthanchor/utils/uncertainty_measures/: __init__.py  cue.py  internal_score.py  lexical_similarity.py  p_true.py  semantic_entropy.py  verb_score.py
