[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "truthanchor"
version = "0.1.0"
description = "Calibrate raw LLM uncertainty scores into truth-aligned scores."
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10"
dependencies = [
  "datasets>=2.20,<5",
  "evaluate>=0.4.0,<0.5",
  "matplotlib>=3.8,<4",
  "nltk>=3.8,<4",
  "numpy>=1.26,<3",
  "pandas>=2.2,<3",
  "scikit-learn>=1.4,<2",
  "scipy>=1.11,<2",
  "torch>=2.2",
  "tqdm>=4.66,<5",
  "transformers>=4.45,<5",
]

[project.scripts]
truthanchor-generate = "truthanchor.generation:main"
truthanchor-score = "truthanchor.scoring:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"truthanchor.utils.resources" = ["prompts/*.txt"]
